@@ -14,6 +14,8 @@
 - added envvar() convenience function for referencing environment variables
 - added --wrap-output command line option for tweaking line-wrapping
   behavior (based on patch by Francesco Montorsi)
+- bakefile_gen uses all available CPUs by default now; use explicit -j1
+  flag to get the old behavior
 
 
 Version 0.2.2
